--- a/app/views/v3/cases/notice-confirmation-post.html
+++ b/app/views/v3/cases/notice-confirmation-post.html
@@ -23,11 +23,13 @@
        Your client will receive an [email] [letter] from HM Courts and Tribunals Service to confirm they want you to act on their behalf.
       </p>
 
-<p>The link will expire 14 days from the date the email is sent.</p>
+      <p>The link will expire 14 days from the date the letter is sent.</p>
+
 
     <p><a href="index.html">Back to your cases</a></p>
-    <h3 class="govuk-heading-m"><a style="color:blue" href="confirmation-email">Email - continue journey from recepient point of view</a></h3>
   
+  
+     <h3 class="govuk-heading-m"><a style="color:blue" href="confirmation-post">Post - continue journey from recepient point of view</a></h3>
      <p></p>
     </div>
 
