--- a/app/views/v3/cases/notice.html
+++ b/app/views/v3/cases/notice.html
@@ -5,10 +5,10 @@ Case access
 {% endblock %}
 {% block beforeContent %}
 {{ govukPhaseBanner({
-  tag: {
-    text: "beta"
-  },
-  html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
+tag: {
+text: "beta"
+},
+html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
 }) }}
 {{govukBackLink({
 href: 'case-access'
@@ -17,64 +17,43 @@ href: 'case-access'
 {% block content %}
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-   
-
-           {{ govukRadios({
-  idPrefix: "sign-in",
-  name: "sign-in",
-  fieldset: {
-    legend: {
-      text: "Notice of acting",
-      isPageHeading: true,
-      classes: "govuk-fieldset__legend--xl"
-    }
-  },
-  hint: {
-    text: "Use this service to:"
-  },
-  items: [
-    {
-      value: "notice-of-acting",
-      text: "Act on a client’s behalf",
-      label: {
-        classes: "govuk-label--s"
-      },
-      hint: {
-        text: "Service for professionals to take on acting on a client’s behalf for the first time"
-      }
-    },
-    {
-      value: "inbound-coms",
-      text: "Citizen changing their legal representative",
-      label: {
-        classes: "govuk-label--s"
-      },
-      hint: {
-        text: "Service allowing citizens changing their legal representative part-way through their case"
-      }
-    }
-  ]
-}) }}
-
-        <h2 class="govuk-heading-m">Before you start</h2>
-      <!--  <h3 class="govuk-heading-s">You can only do this if:</h3>
-        <ul class="govuk-list govuk-list--bullet">
-            <li>a case exists online</li>
-            <li>you have the email address of the individual you are representing</li>
-        </ul> -->
-        <h3 class="govuk-heading-s">If your client has asked you to act on their behalf, you’ll need their:</h3>
-        <ul class="govuk-list govuk-list--bullet">
-            <li>case reference</li>
-            <li>email address</li>
-            <!--<li>designation whether they are the claimant or respondent</li>-->
-            <li>method of confirmation</li>
-        </ul>
-        <p>You'll also need to confirm your details.</p>
-        <form action="/v3/cases/start">
-        
-            {{govukButton({
-            text: 'Continue'
-            })}}
+        <div class="govuk-form-group">
+            <form action="/v3/cases/start">
+                <fieldset class="govuk-fieldset" aria-describedby="sign-in-hint">
+                    <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
+                        <h1 class="govuk-heading-xl">
+                            <span class="govuk-caption-xl">Notice of acting</span>
+                            What do you want to do?
+                        </h1>
+                    </legend>
+                    <span id="changed-name-hint" class="govuk-hint">
+                        Select one of the following:
+                    </span>
+                    <div class="govuk-radios">
+                        <div class="govuk-radios__item">
+                            <input class="govuk-radios__input" id="sign-in" name="sign-in" type="radio" value="government-gateway" aria-describedby="sign-in-item-hint">
+                            <label class="govuk-label govuk-radios__label govuk-label--s" for="sign-in">
+                                Become a client’s new legal representative
+                            </label>
+                            <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
+                                Act on a client’s behalf, for example if they no longer want to represent themselves
+                            </span>
+                        </div>
+                        <div class="govuk-radios__item">
+                            <input class="govuk-radios__input" id="sign-in-2" name="sign-in" type="radio" value="govuk-verify" aria-describedby="sign-in-2-item-hint">
+                            <label class="govuk-label govuk-radios__label govuk-label--s" for="sign-in-2">
+                                Change a client's existing solicitor
+                            </label>
+                            <span id="sign-in-2-item-hint" class="govuk-hint govuk-radios__hint">
+                                Become a client’s new legal representative, for example if they want to change their current solicitor
+                            </span>
+                        </div>
+                    </div>
+                </fieldset>
+        </div>
+        {{govukButton({
+        text: 'Continue'
+        })}}
         </form>
     </div>
 </div>
