--- a/app/views/v3/cases/index.html
+++ b/app/views/v3/cases/index.html
@@ -6,6 +6,7 @@
 {% block pageTitle %}
   Case list
 {% endblock %}
+
 {% block beforeContent %}
 {{ govukPhaseBanner({
   tag: {
@@ -14,7 +15,9 @@
   html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
 }) }}
 {% endblock %}
+
 {% block content %}
+
   {{ hmctsPageHeaderWithActions({
     title: {
       html: '<h1 class="govuk-heading-xl">Your cases (h1)</h1>'
@@ -40,8 +43,46 @@
         </div>
       </a>
 
-
     </div>
+
+
+
 </div>
 
+
 {% endblock %}
+
+  {% block footer %}
+    <footer class="govuk-footer" role="contentinfo"><div class="hmcts-width-container "><div class="govuk-footer__meta"><div class="govuk-footer__meta-item govuk-footer__meta-item--grow">
+
+
+
+<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+
+<ul class="hmcts-footer__list hmcts-footer__list--inline">
+
+  <li class="hmcts-footer__list-item">
+   <a class="hmcts-footer__link" href="#">Accessibility</a>
+        </li>
+       <li class="hmcts-footer__list-item">
+          <a  class="hmcts-footer__link" href="#">Terms and conditions</a>
+        </li>
+
+        <li class="hmcts-footer__list-item">
+          <a  class="hmcts-footer__link" href="#">Cookies</a>
+        </li>
+
+        <li class="hmcts-footer__list-item">
+          <a  class="hmcts-footer__link" href="#">Privacy policy</a>
+        </li>
+          <li class="hmcts-footer__list-item">
+          <a target="_blank" class="hmcts-footer__link" href="/v3/cases/get-help">Get help</a>
+        </li>
+
+</ul>
+
+</div>
+<div class="govuk-footer__meta-item"><a class="govuk-footer__link govuk-footer__copyright-logo" href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/">© Crown copyright</a></div></div></div>
+
+</footer>
+  {% endblock %}
