--- a/app/views/v3/cases/details.html
+++ b/app/views/v3/cases/details.html
@@ -12,7 +12,7 @@ Prefered method of confirmation - Notice of acting
 }) }}
 
 {{govukBackLink({
-href: 'method'
+href: 'sol-details'
 })}}
 {% endblock %}
 {% block content %}
@@ -96,8 +96,7 @@ href: 'method'
             },
             value: {
             text: "",
-            html: data ['response']
-            },
+            html: "Email"            },
             actions: {
             items: [
             {
