--- a/app/views/v3/cases/notice.html
+++ b/app/views/v3/cases/notice.html
@@ -36,7 +36,7 @@ href: 'case-access'
                                 Become a client’s new legal representative
                             </label>
                             <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-                                Act on a client’s behalf, for example if they no longer want to represent themselves
+                               For example if they no longer want to represent themselves
                             </span>
                         </div>
                         <div class="govuk-radios__item">
@@ -45,7 +45,7 @@ href: 'case-access'
                                 Change a client's existing solicitor
                             </label>
                             <span id="sign-in-2-item-hint" class="govuk-hint govuk-radios__hint">
-                                Become a client’s new legal representative, for example if they want to change their current solicitor
+                                For example if they want to change their current solicitor
                             </span>
                         </div>
                     </div>
