updated index links

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -32,16 +32,23 @@
         <li><a href="/v3/cases/case-access">Case access - Notice of acting</a></li>
          <li><a href="/v3/cases/notice">Notice of acting - Options</a></li>
           <li><a href="/v3/cases/start">Notice of acting - Act on a client’s behalf - step 1</a></li>
-          <li><a href="/v3/cases/method">Notice of acting - Act on a client’s behalf - step 2</a></li>
-<li><a href="/v3/cases/prof-details-1">Notice of acting - Act on a client’s behalf - step 3</a></li>
-<li><a href="/v3/cases/prof-details">Notice of acting - Act on a client’s behalf - step 4</a></li>
-<li><a href="/v3/cases/notice-confirmation">Notice of acting - Act on a client’s behalf - step 5</a></li>
+          <li><a href="/v3/cases/method">Notice of acting - Act on a client’s behalf - step 2 - Choose</a></li>
+<li><a href="/v3/cases/sol-details">Notice of acting - Act on a client’s behalf - step 3 - Email route - Solicitor details</a></li>
+<li><a href="/v3/cases/sol-details-post">Notice of acting - Act on a client’s behalf - step 3 - Post route - Solicitor details and corresponence address</a></li>
 
+<li><a href="/v3/cases/details">Notice of acting - Act on a client’s behalf - step 4 - Email route - Check answers</a></li>
+<li><a href="/v3/cases/details-post">Notice of acting - Act on a client’s behalf - step 4 - Post route - Check answerss</a></li>
+
+<li><a href="/v3/cases/notice-confirmation">Notice of acting - Act on a client’s behalf - step 5 - Email route</a></li>
+<li><a href="/v3/cases/notice-confirmation-post">Notice of acting - Act on a client’s behalf - step 5 - Post route</a></li>
+<br>
 <li><a href="/v3/cases/confirmation-email">Notice of acting - Email - Continue journey from recepient point of view - step 1</a></li>
+<li><a href="/v3/cases/confirmation-post">Notice of acting - Post - Continue journey from recepient point of view - step 1</a></li>
+<br>
 <li><a href="/v3/cases/confirmation-portal">Notice of acting - Portal - Continue journey from recepient point of view - step 2</a></li>
 <li><a href="/v3/cases/confirmation-portal-cancel">Notice of acting - Portal - Cancel - Continue journey from recepient point of view - step 3</a></li>
 <li><a href="/v3/cases/confirmation-portal-success">Notice of acting - confirmation sent - Continue journey from recepient point of view - step 4</a></li>
-
+<br>
 <li><a href="/v3/cases/confirmation-email-portal">Notice of acting - Act on a client’s behalf - step 6</a></li>
 <li><a href="/v3/cases/show">Notice of acting - Act on a client’s behalf - step 7</a></li>
         </ul>
