text amends with Dan

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -26,6 +26,8 @@
  <br>
 
   <p class="govuk-body govuk-!-font-weight-bold">Private beta</p>
+<li><a href="/v3/cases/get-help">Get help - details page - shows status using badges</a></li>
+<br>
 
             <p class="govuk-body govuk-!-font-weight-bold">Notice of acting</p>
         <li><a href="/v3/cases">Case access</a></li>
