--- a/app/views/v3/cases/details-post.html
+++ b/app/views/v3/cases/details-post.html
@@ -65,7 +65,7 @@ href: 'sol-details-post'
 
                 {
             key: {
-            text: "Address"
+            text: "Organisation address"
             },
             value: {
             html: "72 Guild Street<br>
