--- a/app/views/v3/cases/method.html
+++ b/app/views/v3/cases/method.html
@@ -121,7 +121,7 @@ href: 'start'
     },
     {
       value: "Post",
-                    text: "Enter client's postal address ",
+                    text: "Client's postal address ",
                     conditional: {
                     html: postHtml
       }
