--- a/app/views/v3/cases/sol-details-post.html
+++ b/app/views/v3/cases/sol-details-post.html
@@ -20,7 +20,7 @@ href: 'method'
         <form action="/v3/cases/details-post">
             <h1 class="govuk-heading-xl">
                 <span class="govuk-caption-xl">Notice of acting</span>
-                Your correspondence details
+                Your contact details
             </h1>
             <p class="govuk-body-l">These details will be used in the letter sent to the client to confirm they want you to act on their behalf.</p> 
             <div class="govuk-form-group">
@@ -35,10 +35,9 @@ href: 'method'
                 </label>
                 <input class="govuk-input" id="full-name" name="full-name" type="text" autocomplete="name" spellcheck="false" value="Hamlin and Tinklin Solicitors">
             </div>
-            <h3 class="govuk-heading-m">Your address</h3>
-            <p>
-                This is the address of your organisation. It will be shown at the top of the letter sent to the client.
-            </p>
+             <h3 class="govuk-heading-m">Organisation address</h3>
+            
+           
             <div class="govuk-form-group">
                 <label class="govuk-label" for="width-20">
                     Building and street
