--- a/app/views/v3/cases/sol-details.html
+++ b/app/views/v3/cases/sol-details.html
@@ -21,7 +21,7 @@ href: 'method'
         <form action="/v3/cases/details">
             <h1 class="govuk-heading-xl">
             <span class="govuk-caption-xl">Notice of acting</span>
-            Your correspondence details
+            Your contact details
         </h1>
 
     <p class="govuk-body-l">These details will be used in the email sent to the client to confirm they want you to act on their behalf.</p>    
