--- a/app/views/v3/cases/start.html
+++ b/app/views/v3/cases/start.html
@@ -29,7 +29,7 @@ href: 'notice'
             classes: 'govuk-label--s'
             },
             hint: {
-            text: "This is their 16-digit number. For example: 1111-2222-3333-4444"
+            text: "This is a 16-digit number. For example: 1111-2222-3333-4444"
             },
             id: "reference",
             name: "reference"
