--- a/app/views/v3/cases/method.html
+++ b/app/views/v3/cases/method.html
@@ -121,7 +121,7 @@ href: 'start'
     },
     {
       value: "Post",
-                    text: "Client's postal address ",
+                    text: "By post",
                     conditional: {
                     html: postHtml
       }
@@ -136,7 +136,7 @@ href: 'start'
             text: 'Continue'
             })}}
         </form>
-        <p><a href="sol-details-post">Post example</a></p>
+        <p><a href="sol-details-post">By post example</a></p>
     </div>
 
 </div>
