created v4 for new NoA journey

--- a/app/views/v4/index.html
+++ b/app/views/v4/index.html
@@ -13,7 +13,7 @@
     <div class="govuk-grid-column-full">
 <h1 class="govuk-heading-l">Sign in</h1>
 
-    <form method="get" action="v4/terms.html">
+    <form method="get" action="/v4/terms.html">
 
       {{ govukInput({
         label: {
