--- a/app/views/index.html
+++ b/app/views/index.html
@@ -64,19 +64,37 @@
           <li><a href="/v3/cases/confirmation-email-message-error">Inbound communications - Email to user - virus detected</a></li>
           <li><a href="/v3/cases/confirmation-email-message-support">Inbound communications - Email to support team - example of ticket</a></li>
         </ul>
-         <p class="govuk-body govuk-!-font-weight-bold">Terms and Conditions</p>
+     
+      {% endset %}
+
+ 
+ {% set iterationFourHtml %}
+        <p class="govuk-body">Lastest design</p>
+        <ul class="govuk-list">
+           <p class="govuk-body govuk-!-font-weight-bold">Notice of Acting</p>
+          <li><a href="/v4/cases/show">Notice of Acting</a></li>
+        </ul>
+        <p class="govuk-body govuk-!-font-weight-bold">Terms and Conditions</p>
         <ul class="govuk-list">
           <li><a href="/v4">Terms and Conditions - Sign in</a></li>
           <li><a href="/v4/terms">Terms and Conditions - New terms</a></li>
-          <li><a href="/v4/terms-pop">Terms and Conditions - New terms pop up</a></li>
+          <li><a href="/v4/terms-pop">Terms and Conditions - New terms pop up (EUI-1501)</a></li>
         </ul>
-      {% endset %}
+      {% endset %}     
 
+
+ {{ govukDetails({
+        summaryHtml: '<div class="govuk-!-font-size-24 govuk-!-font-weight-bold">Iteration 4 (Latest Feb 2020)</div>',
+        html: iterationFourHtml
+      }) }}
+
+     
       {{ govukDetails({
-        summaryHtml: '<div class="govuk-!-font-size-24 govuk-!-font-weight-bold">Iteration 3 (Latest Dec 2019)</div>',
+        summaryHtml: '<div class="govuk-!-font-size-24 govuk-!-font-weight-bold">Iteration 3 (Dec 2019)</div>',
         html: iterationTwoHtml
       }) }}
 
+        
       {% set iterationOneHtml %}
         <p class="govuk-body">Illustrate the components and journey as black boxes including the way the components load and render indepently.</p>
         <ul class="govuk-list">
