--- a/app/views/v4/layout.html
+++ b/app/views/v4/layout.html
@@ -42,7 +42,7 @@
 
     service: {
       name: serviceName,
-      url: '#'
+      url: '/'
     },
 
     navigation: {
@@ -64,7 +64,7 @@
     label: 'Primary navigation',
     items: [{
     text: 'Your cases',
-    href: getUrl('/'),
+    href: getUrl('/cases'),
     active: pageId == 'your-cases'
     }],
     searchHtml: searchHtml
