updated get help text

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -69,6 +69,9 @@
 
  
  {% set iterationFourHtml %}
+  <p class="govuk-body govuk-!-font-weight-bold">Get help telephone numbers updated with IAC and FPLA</p>
+ <li><a href="/v4/cases/get-help">Get help - details page (no service badges)</a></li>
+ <br>
         <p class="govuk-body">Lastest design</p>
         <ul class="govuk-list">
            <p class="govuk-body govuk-!-font-weight-bold">Notice of Acting</p>
