--- a/app/views/v4/cases/get-help.html
+++ b/app/views/v4/cases/get-help.html
@@ -28,7 +28,7 @@
               <h1 class="govuk-heading-xl">Get help</h1>
               
      <h3 class="govuk-heading-m">Probate</h3>
-    <p> <span class="hmcts-badge hmcts-badge--red">Private beta</span> </p>
+  
     <ul class="govuk-list">
   <li>
     <span class="govuk-body govuk-!-font-weight-bold">Email: </span><a href="mailto:#">contactprobate@justice.gov.uk</a></li>
@@ -40,7 +40,7 @@
 
 <br>
   <h3 class="govuk-heading-m">Divorce</h3>
-      <p> <span class="hmcts-badge">Public beta</span> </p>
+
     <ul class="govuk-list">
   <li>
     <span class="govuk-body govuk-!-font-weight-bold">Email: </span><a href="mailto:#">divorcecase@justice.gov.uk</a></li>
@@ -51,10 +51,28 @@
 
 <br>
      <h3 class="govuk-heading-m">Financial remedy</h3>
-      <p> <span class="hmcts-badge hmcts-badge--red">Private beta</span> </p>
+     
      <ul class="govuk-list">
   <li><span class="govuk-body govuk-!-font-weight-bold">Email: </span><a href="mailto:#">contactfinancialremedy@justice.gov.uk</a></li>
   <li><span class="govuk-body govuk-!-font-weight-bold">Phone: </span>0300 303 0642</li>
+  <li><span class="govuk-body govuk-!-font-weight-bold">Opening times: </span>Monday to Friday, 9.30am to 5pm (excluding public holidays)</li>
+
+</ul>
+<br>
+     <h3 class="govuk-heading-m">Immigration and Asylum</h3>
+    
+     <ul class="govuk-list">
+  <li><span class="govuk-body govuk-!-font-weight-bold">Email: </span><a href="mailto:#">customerservice@justice.gov.uk</a></li>
+  <li><span class="govuk-body govuk-!-font-weight-bold">Phone: </span>0300 123 1711</li>
+  <li><span class="govuk-body govuk-!-font-weight-bold">Opening times: </span>Monday to Friday, 8.30am to 5pm (excluding public holidays)</li>
+
+</ul>
+<br>
+     <h3 class="govuk-heading-m">Family Public Law and Adoption</h3>
+     
+     <ul class="govuk-list">
+  <li><span class="govuk-body govuk-!-font-weight-bold">Email: </span><a href="mailto:#">fpla@justice.gov.uk</a></li>
+  <li><span class="govuk-body govuk-!-font-weight-bold">Phone: </span>0330 808 4424</li>
   <li><span class="govuk-body govuk-!-font-weight-bold">Opening times: </span>Monday to Friday, 9.30am to 5pm (excluding public holidays)</li>
 
 </ul>
