--- a/app/views/v4/cases/notice.html
+++ b/app/views/v4/cases/notice.html
@@ -72,41 +72,30 @@ Case access
                         <div class="govuk-radios__item">
                             <input class="govuk-radios__input" id="sign-in" name="sign-in" type="radio" value="government-gateway" aria-describedby="sign-in-item-hint">
                             <label class="govuk-label govuk-radios__label govuk-label--s" for="sign-in">
-                                Become a client’s new legal representative
+                                Add a legal representative to the case
                             </label>
                             <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-                               For example, if they no longer want to represent themselves
+                               For example, if the appellant no longer wants to represent themselves
                             </span>
                         </div>
                         <div class="govuk-radios__item">
                             <input class="govuk-radios__input" id="sign-in-2" name="sign-in" type="radio" value="govuk-verify" aria-describedby="sign-in-2-item-hint">
                             <label class="govuk-label govuk-radios__label govuk-label--s" for="sign-in-2">
-                                Change a client's existing solicitor
+                                Change an existing legal representative
                             </label>
                             <span id="sign-in-2-item-hint" class="govuk-hint govuk-radios__hint">
-                                For example, if they want to change their current solicitor
+                                For example, if the appellant wants to change their current solicitor
                             </span>
                         </div>
                           <div class="govuk-radios__item">
                             <input class="govuk-radios__input" id="sign-in-2" name="sign-in" type="radio" value="govuk-verify" aria-describedby="sign-in-2-item-hint">
                             <label class="govuk-label govuk-radios__label govuk-label--s" for="sign-in-2">
-                                Third option
+                                Remove an existing legal representative
                             </label>
                             <span id="sign-in-2-item-hint" class="govuk-hint govuk-radios__hint">
-                                To be added
+                                For example, legal representative no longer wishes to represent appellant
                             </span>
                         </div>
-                          <div class="govuk-radios__item">
-                            <input class="govuk-radios__input" id="sign-in-2" name="sign-in" type="radio" value="govuk-verify" aria-describedby="sign-in-2-item-hint">
-                            <label class="govuk-label govuk-radios__label govuk-label--s" for="sign-in-2">
-                                Forth option
-                            </label>
-                            <span id="sign-in-2-item-hint" class="govuk-hint govuk-radios__hint">
-                                To be added
-                            </span>
-                        </div>
-
-                  
                     </div>
                 </fieldset>
         </div>
