--- a/app/views/v4/cases/start.html
+++ b/app/views/v4/cases/start.html
@@ -58,7 +58,7 @@ href: 'notice'
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-xl">
   <span class="govuk-caption-xl">Notice of acting</span>
-  Change client's existing solicitor
+  Change an existing legal representative
 </h1>
 
         <form action="/v4/cases/details">
