EUI-1593 text amends

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -79,7 +79,7 @@
         <p class="govuk-body govuk-!-font-weight-bold">Terms and Conditions</p>
         <ul class="govuk-list">
           <li><a href="/v4">Terms and Conditions - Sign in</a></li>
-          <li><a href="/v4/terms">Terms and Conditions - New terms</a></li>
+          <li><a href="/v4/terms">Terms and Conditions - New terms - EUI-1593 - text changes.</a></li>
           <li><a href="/v4/terms-pop">Terms and Conditions - New terms pop up (EUI-1501)</a></li>
         </ul>
       {% endset %}     
