--- a/app/views/v4/terms.html
+++ b/app/views/v4/terms.html
@@ -16,7 +16,7 @@
   <h2 class="govuk-heading-m">Terms and conditions</h2>
 <p>You have read and understood the <a href="terms-pop" rel="noopener noreferrer" target="_blank">terms and conditions</a> and are eligible for an account.</p>
 
-<p>If these terms and conditions are updated, we'll ask you to review and confirm them again.</p>
+<p>If these terms and conditions are updated, we’ll ask you to review and accept them again.</p>
 
 <p><a href="/v4/search" role="button" draggable="false" class="govuk-button">
   Confirm
