updated terms and conditions

--- a/app/views/v4/terms.html
+++ b/app/views/v4/terms.html
@@ -14,9 +14,10 @@
     <div class="govuk-grid-column-two-thirds">
 <h1 class="govuk-heading-xl">Using this service</h1>
   <h2 class="govuk-heading-m">Terms and conditions</h2>
-<p>You have read and understood the <a href="terms-pop" rel="noopener noreferrer" target="_blank">terms and conditions</a> and are eligible for an account.</p>
 
-<p>If these terms and conditions are updated, we’ll ask you to review and accept them again.</p>
+<p>We’ve recently updated the <a href="terms-pop" rel="noopener noreferrer" target="_blank">terms and conditions</a>.</p>
+
+<p>You must review and accept them.</p>
 
 <p><a href="/v4/search" role="button" draggable="false" class="govuk-button">
   Confirm
