--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -15,6 +15,12 @@ $hmcts-page-width: 1220px;
 // Components that aren't in Frontend
 @import "components/cookie-banner";
 
+
+// Import GOV.UK Frontend
+@import "node_modules/govuk-frontend/all";
+@import "node_modules/@hmcts/frontend/all";
+
+
 // Add extra styles here, or re-organise the Sass files in whichever way makes most sense to you
 
 .black-box {
