--- a/app/views/v4/cases/check.html
+++ b/app/views/v4/cases/check.html
@@ -59,7 +59,7 @@ href: 'ref'
   <div class="govuk-grid-column-two-thirds">
     <div class="govuk-form-group">
       <h1 class="govuk-body govuk-!-font-size-48 govuk-!-font-weight-bold"> <span class="govuk-caption-xl">Assign to another solicitor</span>
-        Check your answers before sending
+        Check details before sending
       </h1>
     </div>
 
@@ -95,7 +95,7 @@ href: 'ref'
         </dd>
         <dd class="govuk-summary-list__actions">
           <a class="govuk-link" href="BR31">
-            Change<span class="govuk-visually-hidden"> address</span>
+            <span class="govuk-visually-hidden"> address</span>
           </a>
         </dd>
       </div>
@@ -108,7 +108,7 @@ href: 'ref'
     <dl class="govuk-summary-list govuk-!-margin-bottom-9">
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key">
-          Name
+          Case title
         </dt>
         <dd class="govuk-summary-list__value">
           Neha Venkatanarasimharaj Vs Sanjet Venkatanarasimharaj
@@ -121,10 +121,10 @@ href: 'ref'
       </div>
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key">
-          Type
+          Case type
         </dt>
         <dd class="govuk-summary-list__value">
-          Divorce
+          Divorce case - v115.00
         </dd>
         <dd class="govuk-summary-list__actions">
           <a class="govuk-link" href="#">
@@ -134,7 +134,7 @@ href: 'ref'
       </div>
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key">
-          Reference
+          Case reference
         </dt>
         <dd class="govuk-summary-list__value">
           9417-3739-9576-5131
